Kubernetes/cka/networking/ingress/nginx-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: nginx-controller
  name: nginx-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-controller
  template:
    metadata:
      labels:
        name: nginx-controller
    spec:
      containers:
        - image: nginx:alpine
          name: nginx
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-config
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
