Kubernetes/cka/networking/ingress/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec: 
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-v2
            port:
              number: 80
